# modpath-cpp

./: .coveragerc  LICENSE  README.md  modpath-cpp  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
modpath_cpp/: __init__.py  cli.py  planner.py
tests/: test_planner.py
tests/fixtures/sample_project/: compile_commands.json
tests/fixtures/sample_project/include/common/: config.h
tests/fixtures/sample_project/include/core/: alg.hpp  cycle_a.hpp  cycle_b.hpp  math.hpp
tests/fixtures/sample_project/src/: main.cpp  tool.cpp
