[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modpath-cpp"
version = "0.1.0"
description = "C++20 modules migration planner from compile_commands"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Greeny" }]
license = { text = "MIT" }
keywords = ["cpp", "c++20", "modules", "build", "migration", "compile-commands"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gyuro/modpath-cpp"
Repository = "https://github.com/gyuro/modpath-cpp"
Issues = "https://github.com/gyuro/modpath-cpp/issues"

[project.scripts]
modpath-cpp = "modpath_cpp.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["modpath_cpp*"]
